--- a/style.css
+++ b/style.css
@@ -5,9 +5,13 @@
     color: white;
     font-weight: bold;
     font-size: 500%;
-    margin-top: 2%;
-    margin-left: 2%;
+    margin-top: 10%;
+    margin-left: 10%;
     user-select: none;
+}
+
+#waffle {
+    color: rgb(207, 52, 207);
 }
 
 .text {
@@ -15,50 +19,47 @@
     color: white;
     font-size: 200%;
     user-select: none;
-}
-
-#div1 {
-    margin-left: 2%;
     width: 50%;
 }
 
+#div1 {
+    margin-left: 5%;
+    width: 90%;
+    text-align: justify;
+}
+
 .link {
-    color: rgb(150, 150, 150);
+    color: rgb(216, 107, 192);
     transition: all 0.2s ease-in-out;
-    text-decoration: none;
 }
 
 .link:visited {
-    color: rgb(150, 150, 150);
+    color: rgb(216, 107, 192);
     transition: all 0.2s ease-in-out;
-    text-decoration: none;
 }
 
 .link:active {
-    color: rgb(150, 150, 150);
+    color: rgb(216, 107, 192);
     transition: all 0.2s ease-in-out;
-    text-decoration: none;
 }
 
 .link:hover {
-    color: rgb(223, 171, 75);
+    color: rgb(160, 52, 145);
     transition: all 0.2s ease-in-out;
-    text-decoration: none;
 }
 
 .imgFooter {
     height: 30px;
-    width: 37px;
+    width: 54px;
     float: left;
     padding-top: 20px;
-    padding-left: 23px;
+    padding-left: 14px;
 }
 
 #discord {
-    background-color: rgb(223, 171, 75);
-    outline: rgb(223, 171, 75) solid 1px;
-    margin-left: 50px;
-    margin-top: 360px;
+    outline: rgb(207, 52, 207) solid 2px;
+    margin-left: 8%;
+    margin-top: 50px;
     border-radius: 60px;
     cursor: pointer;
     height: 70px;
@@ -68,10 +69,9 @@
 }
 
 #discord:hover {
-    background-color: rgb(255, 255, 255);
-    outline: rgb(223, 171, 75) solid 5px;
+    outline: rgb(207, 52, 207) solid 5px;
     margin-left: 50px;
-    margin-top: 360px;
+    margin-top: 50px;
     border-radius: 60px;
     cursor: pointer;
     height: 70px;
@@ -83,11 +83,116 @@
 
 .textFooter {
     font-family: 'Varela Round', sans-serif;
-    color: rgb(39, 39, 39);
+    color: rgb(255, 255, 255);
+    font-size: 28px;
+    user-select: none;
+    float: left;
+    margin-top: 19px;
+    padding-left: 5px;
+}
+
+#instagram {
+    outline: rgb(207, 52, 207) solid 2px;
+    margin-left: 50px;
+    margin-top: 50px;
+    border-radius: 60px;
+    cursor: pointer;
+    height: 70px;
+    float: left;
+    width: 225px;
+    transition: all 0.1s ease-in-out;
+}
+
+#instagram:hover {
+    outline: rgb(207, 52, 207) solid 5px;
+    margin-left: 50px;
+    margin-top: 50px;
+    border-radius: 60px;
+    cursor: pointer;
+    height: 70px;
+    float: left;
+    width: 225px;
+    transform: scale(1.1);
+    transition: all 0.1s ease-in-out;
+}
+
+.imgFooter2 {
+    height: 34px;
+    width: 34px;
+    float: left;
+    padding-top: 20px;
+    padding-left: 22px;
+}
+
+.textFooter2 {
+    font-family: 'Varela Round', sans-serif;
+    color: rgb(255, 255, 255);
     font-size: 28px;
     user-select: none;
     float: left;
     margin-top: 19px;
     padding-left: 10px;
-    font-weight: bolder;
+}
+
+#twitter {
+    outline: rgb(207, 52, 207) solid 2px;
+    margin-left: 50px;
+    margin-top: 50px;
+    border-radius: 60px;
+    cursor: pointer;
+    height: 70px;
+    float: left;
+    width: 200px;
+    transition: all 0.1s ease-in-out;
+}
+
+#twitter:hover {
+    outline: rgb(207, 52, 207) solid 5px;
+    margin-left: 50px;
+    margin-top: 50px;
+    border-radius: 60px;
+    cursor: pointer;
+    height: 70px;
+    float: left;
+    width: 200px;
+    transform: scale(1.1);
+    transition: all 0.1s ease-in-out;
+}
+
+.imgFooter3 {
+    height: 34px;
+    width: 41px;
+    float: left;
+    padding-top: 20px;
+    padding-left: 26px;
+}
+
+.textFooter3 {
+    font-family: 'Varela Round', sans-serif;
+    color: rgb(255, 255, 255);
+    font-size: 28px;
+    user-select: none;
+    float: left;
+    margin-top: 19px;
+    padding-left: 10px;
+}
+
+#rainbowCat {
+    height: 20%;
+    width: 20%;
+    float: right;
+    margin-top: -10%;
+    margin-right: 15%;
+    transition: all 0.2s ease-in-out;
+}
+
+#rainbowCat:hover {
+    height: 20%;
+    width: 20%;
+    float: right;
+    margin-top: -10%;
+    margin-right: 15%;
+    transition: all 0.2s ease-in-out;
+    cursor: pointer;
+    transform: scale(1.23);
 }
