--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@
 
 #discord:hover {
     outline: rgb(207, 52, 207) solid 5px;
-    margin-left: 50px;
+    margin-left: 8%;
     margin-top: 50px;
     border-radius: 60px;
     cursor: pointer;
